; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_tmr.c_rtc_callback.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_tmr.c_rtc_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@soft_watchdog = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rtc_callback(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 @rtc_timer_update(i32 1)
  %4 = load i64, i64* @soft_watchdog, align 8
  %5 = icmp sgt i64 %4, 0
  br i1 %5, label %6, label %14

6:                                                ; preds = %1
  %7 = load i64, i64* @soft_watchdog, align 8
  %8 = add nsw i64 %7, -1
  store i64 %8, i64* @soft_watchdog, align 8
  %9 = load i64, i64* @soft_watchdog, align 8
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %6
  %12 = call i32 (...) @system_restart()
  br label %13

13:                                               ; preds = %11, %6
  br label %14

14:                                               ; preds = %13, %1
  ret void
}

declare dso_local i32 @rtc_timer_update(i32) #1

declare dso_local i32 @system_restart(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
